# dv-tui

./: CHANGELOG.md  CONFIG.md  CSV_DEMO_COMMANDS.md  DEBUG_GUIDE.md  DRILLDOWN_TEST_GUIDE.md  ENUM_STATUS.md  ENUM_TROUBLESHOOT.md  IMPLEMENTATION_PLAN.md  KEYBINDS.md  LIBRARY.md  LICENSE  QUICKSTART.md  QUICK_CSV_TEST.md  QUICK_TEST_REFERENCE.md  README.md  REFRESH_IMPLEMENTATION.md  TABLE_IMPLEMENTATION_SUMMARY.md  TAB_MANAGEMENT_TESTING.md  TESTING.md  TESTING_14_LIBRARY_API.md  TESTING_15_INFRASTRUCTURE.md  TESTING_17_CLEANUP.md  TESTING_18_PACKAGE_INSTALLATION.md  TESTING_CLI.md  TESTING_DATA_LOADING.md  TESTING_LIBRARY.md  TEST_ENUM_GUIDE.md  TEST_FIXES_README.sh  TEST_REFRESH_GUIDE.md  csv_demo.sh  debug_enum_full.py  debug_imports.py  dv.py  modify_test_data.sh  notes.md  pyproject.toml  test_automated_s_flag.py  test_basic.py  test_colored_tasks.json  test_commands.sh  (+40 more)
dv_tui/: __init__.py  actions.py  cli.py  config.py  config.py.broken  core.py  data_loaders.py  handlers.py  table.py  triggers.py  ui.py  utils.py
examples/: basic_library_usage.py  custom_keybindings.py  nvim_integration.md  play_locator_integration.md  programmatic_updates.py
test_keybinds/: README.md  custom_config.json  inline_config.json  simple_test.py  test_data.json  test_keybinds.sh  verify_keybinds.py
tests/: ALL_TRIGGERS_CONTEXT.md  COMPLETE.md  COMPREHENSIVE_ALL_TRIGGERS.md  COMPREHENSIVE_CONTEXT.md  CONTEXT_VARS_FIX.md  IMPLEMENTATION_SUMMARY.md  LIFECYCLE_README.md  LIFECYCLE_TRIGGERS.md  OPTION_A_COMPLETE.md  README.md  TRIGGER_FIXED.md  TRIGGER_IMPLEMENTATION.md  test_e2e.py  (+23 more)
(+116 files in other folders)
