[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dv-tui"
version = "0.1.0"
description = "A curses-based TUI for viewing JSON/CSV data with nvim integration"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Ylan Allouche"}
]
keywords = ["tui", "curses", "json", "csv", "terminal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Terminals :: Terminal Emulators/X Terminals",
]

[project.urls]
Homepage = "https://github.com/YlanAllouche/dv-tui"
Repository = "https://github.com/YlanAllouche/dv-tui"
Issues = "https://github.com/YlanAllouche/dv-tui/issues"

[project.scripts]
dv = "dv_tui.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dv_tui*"]

[tool.setuptools.package-data]
dv_tui = ["py.typed"]
